--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input class="input" placeholder="Enter your name..."/>
             <input class="input" placeholder="Enter your phone number..."/>
             <button id="subscribe">
-                Subscribe
+                Subscribe button
             </button>
         </div>
         <div id="output">
